Add and delete movies

--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -2,3 +2,15 @@
 
 //$primary: $purple
 
+.v-toaster .v-toast.v-toast-error
+  background: $danger
+  border-color: $danger
+
+.v-toaster .v-toast.v-toast-info
+  background: $info
+  border-color: $info
+
+.v-toaster .v-toast.v-toast-success
+  background: $success
+  border-color: $success
+
